# PomoScheduler

./: README.md  main.py  pyproject.toml
src/pomo/: cli.py  daemon.py  engine.py  models.py  notify.py  settings.py  storage.py  utils.py
src/pomo/tui_src/: delete_modal.py  edit_modal.py  lhs_pane.py  rhs_pane.py  settings_modal.py  stats_modal.py  styles.tcss  tui.py  utils.py
