[project]
name = "pomo-scheduler"
version = "0.1.0"
description = "A headless Pomodoro planner with CLI, TUI, and AI support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.1",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
    "pystray>=0.19.5",
    "textual>=8.0.2",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]

[project.scripts]
pomo = "pomo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pomo"]
